implementado configuração de ambiente, associação n : n entre starship e films.
